# timur

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  server_init.py  util.py
bd/: model.py
bot/: __init__.py  config.py  state_machine.py  telegram.py  util.py  util_s.py
reports/: __init__.py  download_data.py  get_order.py  get_salary.py  info_bd.py  inputs.py  pdf_to_xls.py  pdf_to_xls_2.py  test.py  upload_data.py  upload_data_.py  util.py
